# FP_Assignment

./: DesertExplorer.Lazy.ps  DesertExplorer.Strict.ps  README.md  assignment1.cabal
src/: Data.Internal.Config.hs  Data.Internal.Nat.hs  Main.hs
src/Data/: Config.hs  Desert.hs  Play.hs  Player.hs
src/Data/Internal/: List2D.hs  Nat.hs  Player.hs
src/Data/Internal/List2D/BFS/: Lazy.hs  Strict.hs
