name:                assignment1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Acaccia/assignment1#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Caccia
maintainer:          acaccia@ulb.ac.be
copyright:           2017 Anthony Caccia
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable assignment1
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Internal.Nat
                     , Data.Internal.Player
                     , Data.Internal.Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , random