name:                assignment1
version:             0.1.0.0
synopsis:            Programming assignment for the VUB's FP course
-- description:
homepage:            https://github.com/Acaccia/assignment1#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Caccia
maintainer:          acaccia@ulb.ac.be
copyright:           2017 Anthony Caccia
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable DesertExplorer
  hs-source-dirs:      src
  main-is:             Main.hs
-- ghc-options:         -rtsopts -prof -fprof-auto
  other-modules:       Data.Desert
                     , Data.Internal.Direction
                     , Data.Internal.List2D.BFS.Lazy
                     , Data.Internal.List2D.BFS.Strict
                     , Data.Play
                     , Data.Config
                     , Data.Internal.List2D
                     , Data.Internal.Nat
                     , Data.Player
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , random
                     , containers
                     , lens
                     , parallel
